	-- Updated RELEASE_NOTES, set version to 0.9.2
c3p0-0.9.2-pre5
	-- Some fixes of issues with per-user config overrides, verified and
	   updated docs with respect to per-user configs.
	-- Unsynchronized access to identityToken in the various identityTokenized
	   beans, marking the property volatile instead. This should resolve an
	   occasional deadlock. Many thanks to Phillip Henry, see
	   https://sourceforge.net/tracker/?func=detail&atid=383690&aid=3552097&group_id=25357
	-- Fixed a bug whereunder PoolBackedDataSources threw an Exception
	   trying to bind per-user overrides that properly should be bound
	   only to WrapperConnectionPoolDataSource (or to ComboPooledDataSource,
	   which wraps that). Many thanks to Walter Marcelo Pedrozo Barboza
	   for calling attention to this issue.
        -- Factored out VMID generation into mchange-commons-java.
c3p0-0.9.2-pre4
	-- Fixed broken version on Maven dependency to mchange-commons-java.
	   Version was hardcoded, now uses version number that c3p0 was built
	   against.
c3p0-0.9.2-pre3
	-- Added workaround for bug in Maven 2.2.1 that sometimes leads to corruption
	   of deployed artifacts. See http://jira.codehaus.org/browse/MNG-4301
	-- Eliminated bead RELEASE suffix from use in staging to Maven repository,
	   which should fix managed dependency problems for Maven users.
	-- Required tests of PooledConnections to own the locks associated with those
	   PooledConnections in order to prevent occasional deadlocks when PooledConnection.close()
	   coincides with a Connection test. Many thanks to an anonymous SourceForge user for
	   calling attention to this issue.
c3p0-0.9.2-pre2
	-- Added support for deployment to Maven central repository to build.xml,
	   and noted this version's coordinates in the repository.
	-- Added a src directory to the distribution, containing jarred java
	   sources (including codegenerated sources) intended for debuggers/IDEs.